# Python

./: README.md  class.py  file.csv
Calculator/: Readme.txt  main.py
Core/: ContextManager.py  Iterators.py  algorithms.py  core.py  decorator.py  main.py  temp.py  test.py
Django App/: manage.py
Django App/HackerU/: asgi.py  settings.py  urls.py  views.py  wsgi.py
Django App/cities/: admin.py  forms.py  models.py  urls.py  views.py
Django App/plains/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
DjangoRestApi/: db.sqlite3
Dots/: Dot.docx  Dot.txt  game.py  main.py
Flask-application/: __init__.py  main.py
Handman/: Ass1.sln
P_R_S/: README.txt  gui.py  main.py
Sneak/: README.txt  main.py
Telegram bot/: class.py  mark.py  quizer.py  requirements.txt
application/: database.py
fastProject/: .gitignore  Dockerfile  calculation.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  schema.py
fastProject/alembic/: env.py
fastProject/alembic/versions/: 4a55daa7ba0a_adding_new_column_phone_number.py  6a7294748d31_create_post_table.py  981beb2261ef_add_task_table.py  c439992c5f18_tables.py
fastProject/app/: config.py  database.py  main.py  models.py  oauth2.py  schema.py  schemas.py  utils.py
fastProject/app/db/: database.py
fastProject/app/dependencies/: dependencies.py
fastProject/app/models/: models.py
fastProject/app/repositories/: task.py
fastProject/app/routers/: auth.py  post.py  tasks.py  users.py  vote.py
fastProject/app/schemas/: posts.py  schemas.py  task.py  users.py  votes.py
fastProject/app/services/: task.py
fastProject/app/utils/: calculation.py  oauth2.py  repository.py  utils.py
fastProject/test/: conftest.py  database.py  test_calculation.py  test_post.py  test_users.py
hr-rating-system/: Dockerfile  README.md  db.sqlite3  req.txt
hr-rating-system-main/: Dockerfile  README.md  ad  req.txt
integration-services/: Dockerfile  README.md
is_bitrix24/: models.py  views.py
shf-aster-pf-main/: README.md
shf-integration-services-v1.0-feat-integration/: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  req.txt
(+157 files in other folders)
