[tool.poetry]
name = "fastProject"
version = "0.1.0"
description = "Our FastApi project for yourselft"
authors = ["diasmuratbayev <gunbooldre@gmail.com>"]
license = "YES"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.14,<3.16"
requests = "^2.32.5"
alembic = "^1.17.2"
annotated-types = "^0.7.0"
anyio = "^4.12.0"
asgiref = "^3.11.0"
bcrypt = "4.3.0"
black = "^25.11.0"
certifi = "^2025.11.12"
cffi = "^2.0.0"
charset-normalizer = "^3.4.4"
click = "^8.3.1"
cryptography = "^46.0.3"
django = "^6.0"
dnspython = "^2.8.0"
ecdsa = "^0.19.1"
email-validator = "^2.3.0"
exceptiongroup = "^1.3.1"
fastapi = "^0.123.8"
fastapi-cli = "^0.0.16"
h11 = "^0.16.0"
httpcore = "^1.0.9"
httptools = "^0.7.1"
httpx = "^0.28.1"
idna = "^3.11"
importlib-metadata = "^8.7.0"
importlib-resources = "^6.5.2"
isort = "^7.0.0"
jinja2 = "^3.1.6"
mako = "^1.3.10"
markdown-it-py = "^4.0.0"
markupsafe = "^3.0.3"
mdurl = "^0.1.2"
mypy-extensions = "^1.1.0"
packaging = "^25.0"
passlib = "^1.7.4"
pathspec = "^0.12.1"
pexpect = "^4.9.0"
platformdirs = "^4.5.0"
psycopg2-binary = "^2.9.11"
ptyprocess = "^0.7.0"
pyasn1 = "^0.6.1"
pycparser = "^2.23"
pydantic = "^2.12.5"
pydantic-core = "^2.41.5"
pydantic-settings = "^2.12.0"
pygments = "^2.19.2"
pytest = "^9.0.1"
python-dotenv = "^1.2.1"
python-jose = "^3.5.0"
python-multipart = "^0.0.20"
pyyaml = "^6.0.3"
rich = "^14.2.0"
rsa = "^4.9.1"
ruamel-appconfig = "^0.5.5"
ruamel-std-argparse = "^0.8.3"
shellingham = "^1.5.4"
six = "^1.17.0"
sniffio = "^1.3.1"
speechrecognition = "^3.14.4"
sqlalchemy = "^2.0.44"
sqlparse = "^0.5.4"
starlette = "^0.50.0"
tomli = "^2.3.0"
typer = "^0.20.0"
typing-extensions = "^4.15.0"
urllib3 = "^2.5.0"
uvicorn = "^0.38.0"
uvloop = "^0.22.1"
watchfiles = "^1.1.1"
websockets = "^15.0.1"
yaml-1-3 = "^0.1.0"
zipp = "^3.23.0"
asyncpg = "^0.31.0"
greenlet = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "app"

[tool.poetry.scripts]
somecomand = "app.main:run"